<resources>
    <string name="app_name">chicagoNeighborhoods</string>
    <string name="google_map_api_key">AIzaSyDR1y7EAeUN2VEhyftM8pw_o71Rj24PHsU</string>
    <!-- <string name="kml_url">https://chicagomap.zolk.com/sources/neighborhoods/source.kml</string> -->
    <string name="crime_layer">Crime</string>
    <string name="kml_layer">Neighborhood</string>
    <string name="food_layer">Food</string>
    <string name="transit_layer">Transit</string>
    <string name="drink_layer">Drinks</string>
    <string name="clear_layers">Clear map</string>
    <string name="open_drawer">Open nav drawer</string>
    <string name="close_drawer">Close nav drawer</string>
</resources>
